--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,8 @@
---extra-index-url https://download.pytorch.org/whl/cpu
+fastapi
+uvicorn
+python-multipart
 torch
 transformers
-fastapi
-uvicorn[standard]
 accelerate
+bitsandbytes
+aiofiles
