--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,10 +1,9 @@
 services:
   guardian:
     build: .
+    container_name: guardian
     ports:
       - "8000:8000"
-    volumes:
-      - .:/app
     environment:
       - HF_TOKEN=${HF_TOKEN}
     deploy:
@@ -14,3 +13,4 @@ services:
             - driver: nvidia
               count: all
               capabilities: [gpu]
+    restart: unless-stopped
